# kaboom-solana

./: .gitignore  Anchor.toml  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/cleanup/: route.ts
frontend/src/app/api/commit/: route.ts
frontend/src/app/api/game/[player]/: route.ts
frontend/src/app/api/health/: route.ts
frontend/src/app/api/reveal/: route.ts
frontend/src/app/api/settle/: route.ts
frontend/src/app/leaderboard/: page.tsx
frontend/src/app/logs/: page.tsx
frontend/src/app/play/: page.tsx
frontend/src/app/vault/: page.tsx
frontend/src/components/game/: BetControls.tsx  Grid.tsx  Tile.tsx
frontend/src/components/layout/: Footer.tsx  MobileDrawer.tsx  Navbar.tsx
frontend/src/components/modals/: ModalRoot.tsx  ModalShell.tsx
frontend/src/components/ui/: Icons.tsx  KaboomLogo.tsx
frontend/src/hooks/: useContracts.tsx  useGame.tsx  useGameHistory.ts  useGameHistory.tsx  useModal.tsx  useProgram.tsx  useToast.tsx
frontend/src/lib/: chain.ts  compat.ts  utils.ts
frontend/src/lib/server/: config.ts  game.ts  instructions.ts  session.ts  solana.ts
frontend/src/lib/server/server/: config.ts  game.ts  instructions.ts  solana.ts
frontend/src/providers/: Web3Provider.tsx
programs/kaboom/: Cargo.toml
programs/kaboom/src/: lib.rs
tests/: init-vault.ts
