[package]
name = "kaboom"
version = "0.2.0"
description = "Kaboom! — Provably fair on-chain Mines game on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kaboom"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
sha2 = "0.10"
